[tool.poetry]
name = "cl2js-docs"
version = "0.1.0"
description = ""
authors = ["Jesper Devantier <jesper.devantier@protonmail.com>"]
license = "GPL-v3"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
